# Learning-Resources-Download-Scrapes

./: .gitattributes  .gitignore  CONTRIBUTING.md  RELEASE_NOTES.md  SECURITY.md
scrape_new/: README.md  __init__.py  __main__.py  app.py  cli.py  config.example.json  config.py  exceptions.py  models.py  pyproject.toml  requirements.txt
scrape_new/core/: __init__.py  blockers.py  cookies.py  downloader.py  hls.py  notify.py  paths.py  session.py  verifier.py
scrape_new/docs/: COOKIE_GUIDE.md  README.md  SESSION_PROTOCOL.md  USER_GUIDE.md
scrape_new/extractors/: __init__.py  api.py  article.py  base.py  document.py  image.py  links.py  registry.py  table.py  utils.py  video.py
scrape_new/scripts/: smoke_test.py
scrape_new/services/: __init__.py  batch.py  course_acceptance.py  download_resume.py  english_detect.py  history.py  organizer.py  redaction.py  reporter.py  resource_audit.py  resource_manifest.py  retry.py  review_html.py  scan_chaoxing.py  workflow_planner.py
scrape_new/tests/: _paths.py  test_app_flow.py  test_cli.py  test_config.py  test_core.py  test_course_acceptance.py  test_download_resume.py  test_e2e.py  test_english_detect.py  test_execute_diff.py  test_exercise_validation.py  test_extractors.py  test_naming.py  test_offline_e2e_workflow.py  test_preflight.py  test_real_course_e2e.py  test_redaction_and_cookies.py  test_resource_audit.py  test_resource_manifest.py  test_resume.py  test_review_html.py  test_scan_chaoxing.py  test_services.py  test_smoke.py  test_upload_cli.py  test_upload_diff.py  test_upload_only_targets.py  test_wizard.py  (+1 more)
(+40 files in other folders)
